:sparkles: handle scan jobs creation & pagination
