# scanner/_gen/swagger/v1/scanner.swagger.json
@@ -103,20 +103,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "limit",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "int64"
-          },
-          {
-            "name": "offset",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "int64"
           }
         ],
         "tags": [
@@ -143,24 +129,18 @@
         },
         "parameters": [
           {
-            "name": "start",
-            "in": "query",
-            "required": false,
-            "type": "integer",
-            "format": "int32"
-          },
-          {
-            "name": "end",
-            "in": "query",
-            "required": false,
-            "type": "integer",
-            "format": "int32"
-          },
-          {
             "name": "limit",
             "in": "query",
             "required": false,
-            "type": "string"
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
           }
         ],
         "tags": [
@@ -263,6 +243,18 @@
         "pages": {
           "type": "integer",
           "format": "int32"
+        },
+        "current": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "next": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "prev": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     },
@@ -295,6 +287,15 @@
           "type": "string"
         },
         "sbom": {
+          "type": "string"
+        },
+        "artifactId": {
+          "type": "string"
+        },
+        "artifactName": {
+          "type": "string"
+        },
+        "artifactVersion": {
           "type": "string"
         }
       }
